Fix hero spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -440,9 +440,9 @@ details summary::marker {
 }
 
 @screen md {
-  /* .hero {
-    height: calc(100vh - 1.5rem);
-  } */
+  .hero {
+    height: calc(100vh - 16rem);
+  }
 
   .footer-top::before {
     content: "";
